# IcyTowerClone

./: .gitignore  CMakeLists.txt  ICYTOWERCL.sln  README.MD
ICYTOWERCL/: Animation.cpp  Animation.h  Background.cpp  Background.h  Camera.cpp  Camera.h  Consts.h  DefaultFont.cpp  DefaultFont.h  EyeCandy.cpp  EyeCandy.h  EyeCandyEngine.cpp  EyeCandyEngine.h  FadeEffect.cpp  FadeEffect.h  FloorTypes.cpp  FloorTypes.h  Font.cpp  Font.h  Game.cpp  Game.h  GameOver.cpp  GameOver.h  ICYTOWERCL.vcxproj  ICYTOWERCL.vcxproj.filters  Icon.c  Layer.cpp  Layer.h  PitchedSound.cpp  PitchedSound.h  Platform.cpp  Platform.h  PlatformEngine.cpp  PlatformEngine.h  PlatformLayer.cpp  PlatformLayer.h  Player.cpp  Player.h  RainbowEngine.cpp  RainbowEngine.h  (+8 more)
